# ComikNet-BE

./: .gitignore  LICENCE  READMD.md  README.md  main.py  pyproject.toml
Configs/: config.py
Models/: comic.py  database.py  plugins.py  requests.py  response.py  user.py
Routers/: comic.py  core.py  user.py
Services/Config/: config.py  config.toml.sample
Services/Database/: database.py  session.py
Services/Limiter/: limiter.py
Services/Mail/: mail.py
Services/Modulator/: manager.py
Services/Security/: user.py
Templates/: captcha.html
Utils/: convert.py
comiknet-be/: main.py
comiknet-be/Configs/: config.json
comiknet-be/Models/: database.py  response.py  user.py
comiknet-be/Services/Database/: database.py
comiknet-be/Services/Limiter/: limiter.py
