[tool.poetry]
name = "comiknet-be"
version = "0.1.0"
description = ""
authors = ["BiDuang <me@biduang.cn>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "comiknet-be" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
SQLAlchemy = "^2.0.25"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2 = "^2.9.9"
uvicorn = "^0.26.0"
python-multipart = "^0.0.6"
pycryptodome = "^3.20.0"
rich = "^13.7.0"
slowapi = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
