[project]
name = "ComikNet-BE"
version = "0.2.0"
description = "Backend service for ComikNet project using FastAPI"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "mysqlclient>=2.2.7",
    "nest-asyncio>=1.6.0",
    "pycryptodome>=3.22.0",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.40",
    "toml>=0.10.2",
]

[tool.uv.workspace]
members = ["Plugins/*"]
